{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 24,
  "lineage": "c57b8d85-f52d-54bc-ea98-b07ff5d7f2bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:141917287833:loadbalancer/app/react-shop-test-eu-west-1-lb/ba4e493f0362cab5",
            "arn_suffix": "app/react-shop-test-eu-west-1-lb/ba4e493f0362cab5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "react-shop-test-eu-west-1-lb-2111823853.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:141917287833:loadbalancer/app/react-shop-test-eu-west-1-lb/ba4e493f0362cab5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "react-shop-test-eu-west-1-lb",
            "security_groups": [
              "sg-029fbfc5316b72b20",
              "sg-09784163d7ce0f44b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-056e79af0730eabe3"
              },
              {
                "subnet_id": "subnet-07f20734668e0e517"
              },
              {
                "subnet_id": "subnet-0ba658937aa4e62d4"
              }
            ],
            "subnets": [
              "subnet-056e79af0730eabe3",
              "subnet-07f20734668e0e517",
              "subnet-0ba658937aa4e62d4"
            ],
            "vpc_id": "vpc-0b7f23f3f624eb838",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.backend_ecs",
            "aws_security_group.public_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_lb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:141917287833:listener/app/react-shop-test-eu-west-1-lb/ba4e493f0362cab5/38176a6d496a3d25",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:141917287833:targetgroup/react-shop-test-eu-west-1-ecs-tg/be0838893a830798",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:141917287833:listener/app/react-shop-test-eu-west-1-lb/ba4e493f0362cab5/38176a6d496a3d25",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:141917287833:loadbalancer/app/react-shop-test-eu-west-1-lb/ba4e493f0362cab5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public_lb",
            "aws_lb_target_group.ecs_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:141917287833:targetgroup/react-shop-test-eu-west-1-ecs-tg/be0838893a830798",
            "arn_suffix": "targetgroup/react-shop-test-eu-west-1-ecs-tg/be0838893a830798",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:141917287833:targetgroup/react-shop-test-eu-west-1-ecs-tg/be0838893a830798",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "react-shop-test-eu-west-1-ecs-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b7f23f3f624eb838"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:security-group/sg-029fbfc5316b72b20",
            "description": "Allow HTTP to backend ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029fbfc5316b72b20",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "react-shop-test-eu-west-1-backend-ecs",
            "name_prefix": "",
            "owner_id": "141917287833",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:141917287833:security-group/sg-09784163d7ce0f44b",
            "description": "Allow HTTP/HTTPS to public ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09784163d7ce0f44b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "react-shop-test-eu-west-1-public-lb",
            "name_prefix": "",
            "owner_id": "141917287833",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b7f23f3f624eb838"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}